--- a/index.css
+++ b/index.css
@@ -95,16 +95,19 @@ button {
 .hero-text h2 {
     font-size: 2rem;
     margin-bottom: 1rem;
+    color:#e62429;
 }
 
 .hero-buttons button {
     margin: 0.5rem;
-    background-color: #e62429;
+    background-color: white;
     transition: background-color 0.3s;
+    color:#e62429;
 }
 
 .hero-buttons button:hover {
     background-color: #d42224;
+    color:white;
 }
 
 /* About Section */
@@ -214,6 +217,76 @@ button {
 }
 
 
+/** education section */
+
+
+.education-section {
+    padding: 2rem;
+    background-color: #222;
+    margin: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.education-section h2 {
+    text-align: center;
+    color: #e62429;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+}
+
+.education-entry {
+    
+    margin-bottom: 2rem;
+    padding: 1rem;
+    border-left: 5px solid #e62429;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.education-entry h3 {
+    font-size: 1.5rem;
+    color: #e62429;
+    margin-bottom: 0.5rem;
+}
+
+.education-entry .degree {
+    font-size: 1.2rem;
+    color: #555;
+    margin-bottom: 0.3rem;
+}
+
+.education-entry .period {
+    font-size: 1rem;
+    color: #999;
+    margin-bottom: 0.5rem;
+}
+
+.education-entry .description {
+    font-size: 1rem;
+    color: #666;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
@@ -256,6 +329,10 @@ input[type=submit]:hover {
 
 /* Footer */
 footer {
+   
+   left: 0;
+   bottom: 0;
+   width: 100%;
     padding: 2rem 1rem;
     background-color: #222;
     text-align: center;
