--- a/index.css
+++ b/index.css
@@ -240,32 +240,32 @@ button {
     margin-bottom: 2rem;
     padding: 1rem;
     border-left: 5px solid #e62429;
-    background-color: #fff;
+    background-color: #1b1b1b;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .education-entry h3 {
     font-size: 1.5rem;
-    color: #e62429;
+    color: white;
     margin-bottom: 0.5rem;
 }
 
 .education-entry .degree {
     font-size: 1.2rem;
-    color: #555;
+    color: white;
     margin-bottom: 0.3rem;
 }
 
 .education-entry .period {
     font-size: 1rem;
-    color: #999;
+    color: white;
     margin-bottom: 0.5rem;
 }
 
 .education-entry .description {
     font-size: 1rem;
-    color: #666;
+    color: white;
 }
 
 
